# pe-0.3rc1

./: .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ConfigFile  GEMINI.md  LICENSES  README  configure  distance_map_integration.md  dmap_filestructure_integration.md  mapping.md  math_utils.py  my_planes.txt  rt_visualization_plan.md
cmake/: FindGMP.cmake  FindIrrlicht.cmake  FindMPFR.cmake  config.h.in
doc/: CollisionDetectionConventions.md  DistanceMap_Implementation.md  DistanceMap_MeshCollision.md  DistanceMap_Roadmap.md  DomainDecomposition_Geometries_and_Definition.md  Doxyfile  HashGridsAlgorithm.md  PlaneConventions.md  TechnicalOverview.md  TriangleMesh.md  Vec3_Mat3_Documentation.md  adding_json_parameters.md  build_with_ninja.md  collision_response_analysis-final.md  distanceMap_upgrades.md  domain_geometry.md  ffd_solver.md  lubrication_contacts.md  lubrication_redesign.md  pe.sty  relaxation_models.md  short_range_rep_forces.md
doc/technical-notes/: README.md  batch-generator.md  build-with-cmake.md  build-with-ninja.md  collision-detection-conventions.md  command-line-interface-cpp.md  command-line-interface-h.md  command-line-interface.md  domain-geometry.md  (+22 more)
examples/: CMakeLists.txt
examples/atc/: CMakeLists.txt  atc_example.cpp  example.json  sorted_vertices_by_x_world.txt
examples/basic_lubrication/: CMakeLists.txt  basic_lubrication.cpp
examples/body_removal/: CMakeLists.txt  body_removal.cpp
examples/box_domain/: CMakeLists.txt  box_domain.cpp
examples/boxstack/: BoxStack.cpp
examples/capsule_spin/: CMakeLists.txt  capsule_spin.cpp
examples/cgal_box/: CMakeLists.txt  DistanceMap.cpp  DistanceMap.h  VtkOutput.cpp  VtkOutput.h  cgal_box.cpp  mesh_collision_test.cpp
examples/cgal_examples/: CMakeLists.txt  README.md  VtkOutput.cpp  VtkOutput.h  cgal_box.cpp  debug_coordinate_transform.cpp  distance_maps.md  inverted_distancemap_simulation.cpp  mesh_collision_test.cpp  mesh_containspoint_test.cpp  mesh_distancemap_debug.cpp  mesh_grid_test.cpp  mesh_simulation.cpp  plane_mesh_test.cpp
examples/chain/: Chain.cpp  Makefile
examples/convex_hull/: CMakeLists.txt  convex_hull.cpp
examples/cradle/: Cradle.cpp  Makefile  cradle.pe  cradle2.pe
examples/cylinder/: CMakeLists.txt  cylinder_test.cpp
examples/decomposition/: CMakeLists.txt  decomposition.cpp
examples/decomposition_geometry/: CMakeLists.txt  decomposition_geometry.cpp
examples/detection/: CMakeLists.txt  detection.cpp
examples/domain_decomposition_test/: README.md  domain_decomposition_test.cpp  simple_test.cpp
examples/domino/: Domino.cpp  Makefile
examples/domino/video/: domino.inc
examples/granular/: Granular.cpp  Makefile
examples/granular/video/: pave.tga  settings.inc
examples/kdop_example/: CMakeLists.txt  kdop_example.cpp
examples/lubrication_demo/: CMakeLists.txt  LubricationDemoCommon.h  README.md  plot_blend_and_cap.html  plot_blend_and_cap.py  plot_lubrication.py  sphere_plane_gap.cpp  sphere_sphere_gap.cpp
examples/math_tests/: CMakeLists.txt  lubrication.py  math_tests.cpp
examples/mesh_spin/: CMakeLists.txt  README.md  mesh_spin.cpp
examples/mpi3periodic/: CMakeLists.txt  mpi3periodic.cpp
examples/mpibench/: CMakeLists.txt  mpibench.cpp
examples/mpiboxes/: CMakeLists.txt  mpiboxes.cpp
examples/mpibrazil/: MPIBrazil.cpp  Makefile
examples/mpibrazil/video/: settings.inc
examples/mpicapsules/: CMakeLists.txt  mpicapsules.cpp
examples/mpichannel/: MPIChannel.cpp  Makefile
examples/mpichannel/video/: Makefile  settings.inc
examples/mpicube/: MPICube.cpp  Makefile
examples/mpicube/video/: settings.inc
examples/mpidem/: CMakeLists.txt
examples/mpidem/video/: settings.inc
examples/mpidomain/: CMakeLists.txt  mpidomain.cpp
examples/mpigranular/: MPIGranular.cpp  Makefile
examples/mpigranular/video/: settings.inc
examples/mpihourglass/: MPIHourglass.cpp  Makefile
examples/mpihourglass/video/: settings.inc
examples/mpiimpact/: MPIImpact.cpp  Makefile  mpiimpact.bc
examples/mpiimpact/video/: settings.inc
examples/mpilabyrinth/: MPILabyrinth.cpp  Makefile
examples/mpilabyrinth/video/: settings.inc
examples/mpilattice/: MPILattice.cpp  Makefile
examples/mpilattice/video/: settings.inc
examples/mpilss/: MPILSS.cpp  Makefile
examples/mpilss/video/: settings.inc
examples/mpinano/: MPINano.cpp
examples/mpiperiodic/: CMakeLists.txt  mpiperiodic.cpp
examples/mpiperiodic_dev/: CMakeLists.txt  mpiperiodic_dev.cpp
examples/mpiplanedecomposition/: CMakeLists.txt  mpiplanedecomposition.cpp
examples/mpispheres/: CMakeLists.txt  Makefile  mpispheres.cpp
examples/mpistair/: MPIStair.cpp  Makefile
examples/mpistair/video/: settings.inc
examples/mpiunion/: CMakeLists.txt  mpiunion.cpp
examples/mpiwell/: MPIWell.cpp  Makefile
examples/mpiwell/video/: settings.inc
examples/nano/: Makefile  Nano.cpp
examples/nano/video/: settings.inc
examples/rectigrid_demo/: CMakeLists.txt  rectigrid_demo.cpp
examples/rectigrid_demo/video/: settings.inc
examples/rotation_collision/: CMakeLists.txt  rotation_collision.cpp
examples/shaker/: Makefile  Shaker.cpp
examples/shaker/video/: shaker.inc
examples/simple_demo/: CMakeLists.txt  simple_demo.cpp
examples/simple_granular/: CMakeLists.txt  Makefile  simple_granular.cpp
examples/sphere_column_serial/: CMakeLists.txt  sphere_column_serial.cpp
examples/sphere_column_serial_hcl/: CMakeLists.txt  bed_height.md  sphere_column_serial_hcl.cpp
examples/triangle_mesh/: CMakeLists.txt  triangle_mesh.cpp
examples/trimeshdop_demo/: CMakeLists.txt  trimeshdop_demo.cpp
examples/usage_demo/: CMakeLists.txt  usage_demo.cpp
examples/vtk_shapes_ascii/: CMakeLists.txt  vtk_shapes_ascii.cpp
examples/vtk_writer_test/: CMakeLists.txt  vtk_writer_test.cpp  vtk_writer_test_mpi.cpp
examples/well/: Makefile  Well.cpp
media/: cylinder.3ds
pe/: core.h  engine.h  irrlicht.h  math.h  opendx.h  povray.h  support.h  util.h  vtk.h
tests/: test_math_utils.py
tutorial/: Tutorial00.h  Tutorial01.h  Tutorial02.h  Tutorial03.h  Tutorial04.h
(+1124 files in other folders)
